prothom alo section created with form

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,15 @@
     padding-right: 20px ;
 }
 .p-size{
+    font-size: 0.9rem;
+}
+.pb-size{
     font-size: 0.7rem;
 }
+
+
 .h-200{height: 200px;}
 .h-50{height: 50px;}
 .h-550{height: 550px;}
 .h-300{height: 300px;}
-.h-150{height: 157px;}
+.h-157{height: 157px;}
